# qga-maglev

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  README.pt-BR.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES.pt-BR.md  VALIDATION.md  VALIDATION.pt-BR.md  pyproject.toml  requirements.txt
LICENSES/: QGA_UPSTREAM_NOTICE.txt
data/: README.md  README.pt-BR.md  SHA256SUMS  maglev_complete_optimization_data_10bits.pkl  maglev_complete_optimization_data_16bits.pkl  maglev_complete_optimization_data_24bits.pkl  maglev_complete_optimization_data_32bits.pkl
notebooks/: analise_estabilidade_lmi.ipynb  comparacao_eficiencia_qga_bits.ipynb
results/: README.md  README.pt-BR.md
scripts/: inspect_results.py  qga_smoke.py  regenerate_metrics.py  verify_data.py
src/qga_maglev/: __init__.py  convergence.py  qga.py
tests/: test_convergence.py  test_qga.py
