[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "qga-maglev-analysis"
version = "1.1.0"
description = "Análise de QGA e GA na sintonia de controladores fuzzy para MAGLEV"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
license-files = [
  "LICENSE",
  "LICENSES/*.txt",
  "THIRD_PARTY_NOTICES*.md",
]
authors = [
  {name = "Israel da Silva Felix de Lima"},
]
dependencies = [
  "numpy==2.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
